# sample_etl

./: .gitignore  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yaml  test.yml
tests/: test_sample_etl.py
